2009-11-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12654: Allow custom "New Site Wizard Template"

2009-11-26  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #7263: New register for rendering of sections
	* Fixed issue: #8759: Possibility to define startup language setting for FCEs instances

2009-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12564: Localization view overlaps labels and doesn't align
	* Fixed bug: #12713: Unlink icon use garbage which is used for delete in core

2009-11-25  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #12599: Wrong function name in manual 
	* Fixed bug: #9071: Permisions are not calculated when in sub_elmenet view (thanks to Ingo Schmitt) 
	* Fixed bug: #9068: Edit Icon (pencel) is missing in sub_elmenet view (thanks to Ingo Schmitt) 
	* Fixed issue: #8079: possibility to skip TCEforms when adding a new FCE
	* Fixed bug: #8924: processDatamap_afterDatabaseOperations won't properly work within workspaces (thanks to Jose Antonio Guerra)
	* Fixed bug: #12586: delete icon isn't compatible with drag&drop
	* Fixed bug: #12504: pagemodule drag'n'drop is broken when running on 4.3beta

2009-11-25  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12752: [Safari] Bad icon positioning
	* Fixed bug #10781: Allow user function to determine childTemplate
	* Fixed bug #12753: Handle local TO processing better
	* Fixed bug #12754: "Set" button appears twice in header parts

2009-11-24  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12721: Cannot get TO with rendertype=print when using DBAL

2009-11-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12712: Add Hook renderElement_postProcessDataValues (Thanks to Jeff Segars)

2009-11-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12589: recordlist localization doesn't return to pagemodule

2009-11-14  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #10752: Cryptic text in the mapping interface ("Custom TCE")