@@ -4,6 +4,7 @@
 
 2009-11-26  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Fixed bug: #8353: Element is referenced instead of moved
 	* Fixed issue: #7263: New register for rendering of sections
 	* Fixed issue: #8759: Possibility to define startup language setting for FCEs instances
 
